feat: refactor code to use closure

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
 </head>
 <body>
-    <h1>Clicked 0 times</h1>
-    <button><img id="my-elem" src="img/mycat.jpg" alt="a picture of a cat"></button>
+    <div id="cat1">
+    </div>
+    <div id="cat2">
+    </div>
     <script src="js/jQuery.js"></script>
 </body>
 </html>
