--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </div>
     <div id="cat2">
     </div>
-    <script src="js/jQuery.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
